<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">\nDave\'s Logger!\n</string>
    <string name="app_name">Dave Logger</string>
    <string name="safe_short">S</string>
    <string name="view">View</string>
    <string name="date_edit">Edit date</string>
    <string name="comment_add">Add comment</string>
    <string name="close">Close</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
